# ultilog

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  cookbook.md  index.md  project-bootstrap.md  quickstart.md  roadmap.md  testing.md
docs/adr/: 0001-ergonomic-public-api.md  0002-lazy-bootstrap.md  0003-context-boundaries.md  0004-stdlib-as-spine.md  0005-optional-integrations.md  0006-settings-behind-api.md  0007-testing-first-bootstrap.md  0008-json-prod-mode.md
docs/concepts/: bootstrap.md  context.md  logger-lifecycle.md  presets.md
docs/design/: scaffold-checklist.md  ultilog.md
docs/integrations/: otel.md  rich.md  structlog.md  web.md
docs/reference/: public-api.md  settings.md
docs/reference/modules/: api.md  bootstrap.md  config_basic.md  config_dictconfig.md  state.md  (+15 more)
examples/: 01_zero_config.py  02_explicit_names.py  02_setup_dev.py  03_setup_overrides.py  03_setup_prod.py  04_environment_overrides.py  04_explicit_names.py  04_json_mode.py  05_context_scope.py  05_future_context_scope.py  06_diagnostics.py  06_future_otel.py  06_json_mode.py  07_diagnostics.py  07_fastapi_shape.py  08_manual_handlers.py  08_otel_correlation.py  09_asgi_shape.py  09_manual_handlers.py  10_asgi_shape.py  10_demo_app.py  11_fastapi_shape.py  12_demo_app.py  README.md
examples/demo_app/: __init__.py  main.py  services.py  settings.py
src/ultilog/: __init__.py  __main__.py  api.py  bootstrap.py  constants.py  diagnostics.py  exceptions.py  project_bootstrap.py  settings.py  state.py
tests/: conftest.py
tests/e2e/: test_cli_subprocess.py  test_demo_app.py  test_examples.py  test_placeholder.py
tests/integration/: test_asgi_middleware.py  test_bootstrap_reconfigure.py  test_context_async.py  test_context_scope.py  test_fastapi_integration_shape.py  test_json_mode.py  test_plain_context_output.py  test_setup_flow.py
tests/unit/: test_api.py  test_bootstrap.py  test_caller_inference.py  test_cli.py  test_cli_expanded.py  test_config_export.py  test_context_decorators.py  test_context_filter.py  test_diagnostics.py  test_diagnostics_expanded.py  test_dictconfig.py  test_env_utils.py  test_json_formatter.py  test_key_value_formatter.py  test_manual_capture.py  test_optional_imports.py  test_otel_availability.py  test_otel_correlation.py  test_project_bootstrap.py  test_request_context.py  test_rich_handler.py  test_settings.py  test_settings_validation.py  test_state.py  test_structlog_bridge.py  test_structlog_renderers.py  test_text_formatter.py
(+63 files in other folders)
