[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "ultilog"
version = "0.3.0"
description = "Ergonomic Python logging with Rich-first defaults and a path to structured observability."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "William R. Astley"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]
keywords = ["logging", "structured-logging", "observability", "rich", "opentelemetry"]
dependencies = [
  "rich>=13.7.0",
  "pydantic>=2.13.0",
  "pydantic-settings>=2.14.0",
]

[project.optional-dependencies]
structlog = [
  "structlog>=25.5.0",
]
otel = [
  "opentelemetry-api>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
  "opentelemetry-instrumentation>=0.62b0",
  "opentelemetry-instrumentation-logging>=0.62b0",
]
web = [
  "fastapi>=0.115.0",
  "starlette>=0.45.0",
]
full = [
  "ultilog[structlog,otel,web]",
]

[project.urls]
Homepage = "https://github.com/pr1m8/ultilog"
Repository = "https://github.com/pr1m8/ultilog"
Documentation = "https://github.com/pr1m8/ultilog#readme"
Issues = "https://github.com/pr1m8/ultilog/issues"
Changelog = "https://github.com/pr1m8/ultilog/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "anyio>=4.13.0",
  "coverage>=7.13.5",
  "ruff>=0.15.11",
  "mypy>=1.15.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.0",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[project.scripts]
ultilog = "ultilog.__main__:main"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "anyio: mark async tests to run via anyio",
]

[tool.coverage.run]
branch = true
source = ["ultilog"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
packages = ["ultilog"]
strict = true
warn_unused_configs = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
